some section added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,114 @@
             <img src="./img/invision-screen.png" alt="">
         </div>
        </section>
+       <section class="manage">
+        <div class="manage-image">
+            <img src="./img/team-inbox.png" alt="">
+            <p>Connect with customers and grow faster</p>
+        </div>
+        <div class="manage-texts">
+            <div class="manage-text-1">
+                <h5>Team Inbox</h5>
+                <h1>Manage <br> conversations</h1>
+                <p>One place to manage and respond to all <br> conversations with leads and users. Receive <br> messages from leads.</p>
+            </div>
+            <div class="manage-text-2">
+                <div class="manage-text-2-text">
+                    <p>“Great widgets. Great selection. Great design and <br> easy to implement. Definitely a huge time saver <br> for a web developer!”</p>
+                </div>
+                <div class="manage-text-images">
+                    <div class="manage-text-2-image">
+                        <img src="./img/profile-image.png" alt="">
+                    </div>
+                    <div class="manage-text-2-image-text">
+                        <h4>Viella Malkovich</h4>
+                        <p>Creative Director at Johnson</p>
+                    </div>
+                </div>
+                </div>
+        </div>
+       </section>
+       <section class="built">
+        <div class="built-text">
+<h4>Communicate Better</h4>
+<h1>Built for busy <br> small teams</h1>
+<p>Three products that can be used <br> independently or combined together for <br> your company’s needs</p>
+<button class="btn">Get Started</button>
+        </div>
+        <div class="built-image">
+<img src="./img/communicate.png" alt="">
+<p>A better way to acquire new users</p>
+        </div>
+       </section>
+       <div class="flexible">
+        <div class="flexible-1">
+         <p><span>Subscriptions.</span>  Foundation works with the <br> tools and services you already use every <br> day.</p>
+         <p class="p-text">Learn more about subscriptions</p>
+        </div> 
+        <div class="flexible-2">
+         <p><span>Felxible Hours.</span> Get started with our simple <br> snippet of JavaScript or easy to install SDKs <br> for iOS and Android.</p>
+         <p class="p-text">Get more info about hours</p>
+        </div> 
+        <div class="flexible-3">
+         <p><span>Fast Communication.</span>  We offer measures <br> like 2FA and SSO to ensure the safety of <br> your data.</p>
+         <p class="p-text">Communication guidelines</p>
+        </div> 
+     </div>
+     <section class="engage">
+        <div class="engage-text">
+            <h4>Engage Visitors</h4>
+            <h1>Understand your <br> audience</h1>
+            <p>Early stage company? Eligible applicants get <br> all of our products for just $49 a month.</p>
+            <button class="btn">Get Started</button>
+                <button class="btn-1">Learn More</button>
+        </div>
+     </section>
+     <section class="images">
+        <div class="image-1">
+            <img  src="./img/developers.png" alt="">
+        </div>
+        <div class="image-2">
+            <img src="./img/athletes.png" alt="">
+        </div>
+        <div class="image-3">
+            <img src="./img/entertainment.png" alt="">
+        </div>
+        <div class="image-4">
+            <img src="./img/creators.png" alt="">
+        </div>
+     </section>
+     <section class="logo">
+        <div class="logo-1">
+            <img src="./img/organizations/apple.svg" alt="">
+        </div>
+        <div class="logo-1">
+            <img src="./img/organizations/forbes.svg" alt="">
+        </div>
+        <div class="logo-1">
+            <img src="./img/organizations/google.svg" alt="">
+        </div>
+        <div class="logo-1">
+            <img src="./img/organizations/mashable.svg" alt="">
+        </div>
+        <div class="logo-1">
+            <img src="./img/organizations/newyork-times.svg" alt="">
+        </div>
+        <div class="logo-1">
+            <img src="./img/organizations/wsj.svg" alt="">
+        </div>
+   </section>
+   <div class="slider">
+    <div class="slider-text">
+        <h4>Trusted by the world’s most innovative businesses – big and small</h4>
+        <p>“Comprehensive set of startup tools for all imaginable <br> entrepreneurial needs. Create landing pages, send emails, find freelancers. <br> Perfect for sales, marketing, and support”</p>
+        <h5>Josiah Hart</h5>
+        <p>CTO at Jonson</p>
+    </div>
+    <div class="slider-image">
+        <img src="./img/testimonial.png" alt="">
+    </div>
+    
+    </div>
     </main>
     <footer></footer>
 </body>
