layout has done

--- a/index.html
+++ b/index.html
@@ -189,7 +189,100 @@
     </div>
     
     </div>
+    <section class="hiring">
+        <div class="hiring-text">
+            <h1>We’re hiring</h1>
+            <p>We’re a team of lifelong learners. We’re equal parts left <br> and right brained.</p>
+            <button class="btn3">More about company</button>
+        </div>
+        <div class="hiring-tab">
+            <div class="hiring-tab-1">
+                <p>Front End Developer</p>
+            <p>Los Angeles/Remote</p>
+            <p>></p>
+            </div>
+            <div class="hiring-tab-2">
+                <p >Community Manager</p>
+            <p>New York/Full Time</p>
+            <p>></p>
+            </div>
+            <div class="hiring-tab-3">
+                <p >UI/UX Designer</p>
+            <p>Los Angeles/Full Time</p>
+            <p>></p>
+            </div>
+            
+        </div>
+    </section>
+    <section class="trial">
+        <div class="trial-image">
+<img src="./img/free-trial.png" alt="">
+        </div>
+        <div class="trial-text">
+            <h1>Start your free trial.</h1>
+            <p>Get notified about company updates, news and blog posts. We hate <br> spam.</p>
+            <input type="email" name="" id="" placeholder="Enter Your Email">
+            <button class="btn">Get Started</button>
+            <div class="spann">
+                <span>Free 14-day trial</span>
+                <span> Easy setup ·</span>
+                <span>Cancel any time.</span>
+                <span class="blue"> Check out Terms of Use</span>
+            </div>
+           </div>
+    </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+<div class="foundation">
+    <div class="footer-nav">
+        <div class="nav-logo-image">
+            <img src="./img/logo.svg" alt="">
+        </div>
+        <div class="nav-logo-text">
+            <h3>Foundation <br>
+                Startup landing template</h3>
+        </div>
+    </div>
+   <p>Foundation is a website template for <br> startups and small teams. It helps to build <br> a website in no time.</p>
+    <div class="play">
+        <img src="./img/google-play.png" alt="">
+        <img src="./img/app-store.png" alt="">
+    </div>
+</div>
+<div class="product">
+    <h3>Product</h3>
+    <p>Acquire Users</p>
+    <p>Content Marketing</p>
+    <p>Website Templates</p>
+    <p>Customer Management</p>
+    <p>Virtual Inbox</p>
+</div>
+<div class="company">
+    <h3>Company</h3>
+    <p>About Foundation</p>
+    <p>Brand Guidelines</p>
+    <p>Press Kit</p>
+    <p>Support</p>
+</div>
+ </footer>
+ <hr>
+<div class="footer-end">
+    <div class="footer-end-text">
+        <p>Terms</p>
+        <p>Privacy</p>
+        <p>License</p>
+    </div>
+    <div class="footer-end-logo">
+        <div class="footer-end-logo-1">
+            <img src="./img/social-media/twitter.png" alt="">
+        </div>
+        <div class="footer-end-logo-2">
+            <img src="./img/social-media/fb.png" alt="">
+        </div>
+        <div class="footer-end-logo-3">
+            <img src="./img/social-media/linkedin.png" alt="">
+        </div>
+        </div>
+</div>
 </body>
 </html>
